--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint",
-    "deploy:trigger-prod": "npx trigger.dev@3.3.16 deploy"
+    "deploy:trigger-prod": "npx trigger.dev@3.3.16 deploy",
+    "test": "vitest run --reporter=verbose",
+    "test:coverage": "vitest run --reporter=verbose --run --coverage --coverage.reportOnFailure=true"
   },
   "prisma": {
     "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
@@ -77,9 +79,16 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "postcss": "^8",
+    "pdf-lib": "^1.17.1",
     "prisma": "^6.5.0",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
+    "typescript": "^5",
+    "@vitest/ui": "^2.1.4",
+    "vitest": "^2.1.5",
+    "@vitest/coverage-v8": "^2.1.5",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "jsdom": "^25.0.0"
   }
 }
